TokenExchange Change Log
=========================

Version 2.0.3
  - Shutdown wallet when stopping TokenExchange

Version 2.0.2
  - Check if wallet initialized before accepting API requests
  - Log peer connect/disconnect
  - Bitcoin transaction processed immediately if received by wallet before block
  - Return application name and version in GetStatus response

Version 2.0.1
  - Rename DeleteToken to DeleteNxtTransaction (DeleteToken still accepted)
  - Add DeleteBitcoinTransaction
  - Rename GetTokens to GetNxtTransactions (GetTokens still accepted)
  - Rename GetTransactions to GetBitcoinTransactions and add 'height' parameter (GetTransactions still accepted)
  - Validate the supplied public key when obtaining a Bitcoin address
  - Change GetAddress to return a new address if the current address has been used
  
Version 2.0.0
  - Use integrated Bitcoin SPV wallet instead of external Bitcoin server
  - Add SetExchangeRate, SendBitcoins and EmptyWallet API
