@@ -3,6 +3,7 @@ TokenExchange Change Log
 
 Version 2.0.3
   - Shutdown wallet when stopping TokenExchange
+  - Use ADDR messages to build active peer list
 
 Version 2.0.2
   - Check if wallet initialized before accepting API requests
